# arxiv-voice

./: .gitignore  README.md  pyproject.toml
experiments/dia2/: reasonable_length_input.txt
experiments/kokoro/: simple_narrative.txt
scripts/: run_dia2_reasonable_length.sh  run_kokoro_simple_narrative.py  run_kokoro_simple_narrative.sh  setup_kokoro_macos.sh
src/arxiv_voice/: __init__.py  chunking.py  cli.py  dia_local.py  dialogue.py  extract.py  kokoro_local.py  llm.py  paths.py  pipeline.py  prompts.py  tts.py  utils.py
src/arxiv_voice.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/arxiv_voice/prompts/: chunk_analysis_system.txt  final_overview_system.txt  narrative_script_system.txt  overview_system.txt  podcast_dialogue_system.txt  spoken_brief_system.txt
tests/: test_chunking.py  test_dialogue.py  test_extract.py  test_kokoro_local.py  test_llm.py
