[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv-voice"
version = "0.1.0"
description = "Generate deep paper overviews and local Dia podcasts from PDFs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "dia2 @ git+https://github.com/nari-labs/dia2.git@8687268f4ed3ed20704638fd353b51491de3b476",
  "pypdf>=5.0.0",
]

[project.scripts]
arxiv-voice = "arxiv_voice.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
arxiv_voice = ["prompts/*.txt"]
